force-app/main/default/objects/Krow__Vendor_Payment__c/Krow__Vendor_Payment__c.object-meta.xml
<CustomObject>
    <label>Vendor Invoice</label>
    <nameField>
        <displayFormat>VP{000000}</displayFormat>
        <label>Vendor Invoice Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vendor Invoices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>