force-app/main/default/objects/Krow__Vendor_Payment__c/fields/Krow__Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Krow__Account_Number__c</fullName>
    <label>Account Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>