force-app/main/default/objects/Krow__Vendor_Payment__c/fields/Krow__Additional_Amount__c.field-meta.xml
<CustomField>
    <fullName>Krow__Additional_Amount__c</fullName>
    <label>Additional Amount</label>
    <summarizedField>Krow__Vendor_Additional_Item__c.Krow__Amount__c</summarizedField>
    <summaryForeignKey>Krow__Vendor_Additional_Item__c.Krow__Vendor_Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>