force-app/main/default/objects/Krow__Vendor_Payment__c/fields/Krow__Approved_Time_Only__c.field-meta.xml
<CustomField>
    <fullName>Krow__Approved_Time_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approved Time Only</label>
    <type>Checkbox</type>
</CustomField>