force-app/main/default/objects/Krow__Vendor_Payment__c/fields/Krow__Date_Format__c.field-meta.xml
<CustomField>
    <fullName>Krow__Date_Format__c</fullName>
    <label>Date Format</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>MM-DD-YYYY</fullName>
            </value>
            <value>
                <fullName>DD-MM-YYYY</fullName>
            </value>
            <value>
                <fullName>DD-MMM-YYYY</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>