force-app/main/default/objects/Krow__Vendor_Payment__c/fields/Krow__Expense_Notes__c.field-meta.xml
<CustomField>
    <fullName>Krow__Expense_Notes__c</fullName>
    <label>Expense Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>