force-app/main/default/objects/Krow__Vendor_Payment__c/fields/Krow__Expense_Receipts_Image_View__c.field-meta.xml
<CustomField>
    <fullName>Krow__Expense_Receipts_Image_View__c</fullName>
    <label>Expense Receipts Image View</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Default</fullName>
            </value>
            <value>
                <fullName>Thumbnail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>