force-app/main/default/objects/Krow__Vendor_Payment__c/fields/Krow__Intacct_Bill_Id__c.field-meta.xml
<CustomField>
    <fullName>Krow__Intacct_Bill_Id__c</fullName>
    <label>Intacct Bill Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>