force-app/main/default/objects/Krow__Vendor_Payment__c/fields/Krow__Invoice_Subtotal__c.field-meta.xml
<CustomField>
    <fullName>Krow__Invoice_Subtotal__c</fullName>
    <formula>Krow__Labor_Amount__c + Krow__Expense_Amount__c +  Krow__Additional_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Subtotal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>