force-app/main/default/objects/Krow__Vendor_Payment__c/fields/Krow__Invoice_Total__c.field-meta.xml
<CustomField>
    <fullName>Krow__Invoice_Total__c</fullName>
    <formula>Krow__Invoice_Subtotal__c + Krow__Total_Tax_Amount__c</formula>
    <label>Invoice Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>