force-app/main/default/objects/Krow__Vendor_Payment__c/fields/Krow__Labor_Amount__c.field-meta.xml
<CustomField>
    <fullName>Krow__Labor_Amount__c</fullName>
    <label>Labor Amount</label>
    <summarizedField>Krow__Vendor_Line_Item__c.Krow__Cost_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Krow__Vendor_Line_Item__c.Krow__Include__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Krow__Vendor_Line_Item__c.Krow__Vendor_Payment__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>