force-app/main/default/objects/Krow__Vendor_Payment__c/fields/Krow__Payment_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Krow__Payment_Schedule__c</fullName>
    <label>Payment Schedule</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Net 15</fullName>
            </value>
            <value>
                <fullName>Net 30</fullName>
            </value>
            <value>
                <fullName>Net 45</fullName>
            </value>
            <value>
                <fullName>Net 60</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>