force-app/main/default/objects/Krow__Vendor_Payment__c/fields/Krow__Sage_Message__c.field-meta.xml
<CustomField>
    <fullName>Krow__Sage_Message__c</fullName>
    <label>Sage Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>