force-app/main/default/objects/Krow__Vendor_Payment__c/fields/Krow__Sage_Purchase_Invoice_Id__c.field-meta.xml
<CustomField>
    <fullName>Krow__Sage_Purchase_Invoice_Id__c</fullName>
    <label>Sage Purchase Invoice Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>