force-app/main/default/objects/Krow__Vendor_Payment__c/fields/Krow__Service_Notes__c.field-meta.xml
<CustomField>
    <fullName>Krow__Service_Notes__c</fullName>
    <description>Notes To Show On Vendor Related To Vendor Line Item.</description>
    <label>Service Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>