force-app/main/default/objects/Krow__Vendor_Payment__c/fields/Krow__Total_Tax_Amount__c.field-meta.xml
<CustomField>
    <fullName>Krow__Total_Tax_Amount__c</fullName>
    <formula>( Krow__Labor_Amount__c + Krow__Additional_Amount__c + Krow__Expense_Amount__c ) * Krow__Tax__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Tax Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>