force-app/main/default/objects/Krow__Vendor_Payment__c/fields/Krow__Vendor__c.field-meta.xml
<CustomField>
    <fullName>Krow__Vendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendor</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Krow__Organization__c.Krow__Vendor__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Krow__Organization__c</referenceTo>
    <relationshipName>Vendor_Payment_Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>