force-app/main/default/objects/Krow__Vendor_Payment__c/fields/Krow__Vendor_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Krow__Vendor_Payment_Date__c</fullName>
    <label>Vendor Invoice Date</label>
    <type>Date</type>
</CustomField>