force-app/main/default/objects/Krow__Vendor_Payment__c/fields/Krow__Xero_Reference_Id__c.field-meta.xml
<CustomField>
    <fullName>Krow__Xero_Reference_Id__c</fullName>
    <label>Xero Reference Id</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>